AAE-28451 Refactor